# game_of_life

./: CMakeLists.txt
ext/: CMakeLists.txt
ext/imgui-sfml/: CMakeLists.txt
ext/imgui/examples/: imgui_impl_opengl3.cpp
src/: Grid.cpp  Grid.hpp  Stopwatch.hpp  main.cpp
